compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_1_global_primitives_parsed_content.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: json
---
{
  "units": [
    {
      "global_vars": [
        {
          "access": "Protected",
          "constant": false,
          "retain": false,
          "variables": [
            {
              "name": "gVarBool",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "BOOL",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 2,
                          "column": 18,
                          "offset": 34
                        },
                        "end": {
                          "line": 2,
                          "column": 22,
                          "offset": 38
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 2,
                      "column": 8,
                      "offset": 24
                    },
                    "end": {
                      "line": 2,
                      "column": 16,
                      "offset": 32
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarSInt",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "SINT",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 4,
                          "column": 18,
                          "offset": 59
                        },
                        "end": {
                          "line": 4,
                          "column": 22,
                          "offset": 63
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 4,
                      "column": 8,
                      "offset": 49
                    },
                    "end": {
                      "line": 4,
                      "column": 16,
                      "offset": 57
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarInt",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "INT",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 5,
                          "column": 17,
                          "offset": 82
                        },
                        "end": {
                          "line": 5,
                          "column": 20,
                          "offset": 85
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 5,
                      "column": 8,
                      "offset": 73
                    },
                    "end": {
                      "line": 5,
                      "column": 15,
                      "offset": 80
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarDInt",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "DINT",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 6,
                          "column": 18,
                          "offset": 105
                        },
                        "end": {
                          "line": 6,
                          "column": 22,
                          "offset": 109
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 6,
                      "column": 8,
                      "offset": 95
                    },
                    "end": {
                      "line": 6,
                      "column": 16,
                      "offset": 103
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarLInt",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "LINT",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 7,
                          "column": 18,
                          "offset": 129
                        },
                        "end": {
                          "line": 7,
                          "column": 22,
                          "offset": 133
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 7,
                      "column": 8,
                      "offset": 119
                    },
                    "end": {
                      "line": 7,
                      "column": 16,
                      "offset": 127
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarByte",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "BYTE",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 9,
                          "column": 18,
                          "offset": 154
                        },
                        "end": {
                          "line": 9,
                          "column": 22,
                          "offset": 158
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 9,
                      "column": 8,
                      "offset": 144
                    },
                    "end": {
                      "line": 9,
                      "column": 16,
                      "offset": 152
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarWord",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "WORD",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 10,
                          "column": 18,
                          "offset": 178
                        },
                        "end": {
                          "line": 10,
                          "column": 22,
                          "offset": 182
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 10,
                      "column": 8,
                      "offset": 168
                    },
                    "end": {
                      "line": 10,
                      "column": 16,
                      "offset": 176
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarDWord",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "DWORD",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 11,
                          "column": 19,
                          "offset": 203
                        },
                        "end": {
                          "line": 11,
                          "column": 24,
                          "offset": 208
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 11,
                      "column": 8,
                      "offset": 192
                    },
                    "end": {
                      "line": 11,
                      "column": 17,
                      "offset": 201
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarLWord",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "LWORD",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 12,
                          "column": 19,
                          "offset": 229
                        },
                        "end": {
                          "line": 12,
                          "column": 24,
                          "offset": 234
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 12,
                      "column": 8,
                      "offset": 218
                    },
                    "end": {
                      "line": 12,
                      "column": 17,
                      "offset": 227
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarReal",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "REAL",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 14,
                          "column": 18,
                          "offset": 255
                        },
                        "end": {
                          "line": 14,
                          "column": 22,
                          "offset": 259
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 14,
                      "column": 8,
                      "offset": 245
                    },
                    "end": {
                      "line": 14,
                      "column": 16,
                      "offset": 253
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarLReal",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "LREAL",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 15,
                          "column": 19,
                          "offset": 280
                        },
                        "end": {
                          "line": 15,
                          "column": 24,
                          "offset": 285
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 15,
                      "column": 8,
                      "offset": 269
                    },
                    "end": {
                      "line": 15,
                      "column": 17,
                      "offset": 278
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarDate",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "DATE",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 17,
                          "column": 18,
                          "offset": 306
                        },
                        "end": {
                          "line": 17,
                          "column": 22,
                          "offset": 310
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 17,
                      "column": 8,
                      "offset": 296
                    },
                    "end": {
                      "line": 17,
                      "column": 16,
                      "offset": 304
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            },
            {
              "name": "gVarDateAndTime",
              "data_type_declaration": {
                "Reference": {
                  "referenced_type": "DATE_AND_TIME",
                  "location": {
                    "span": {
                      "Range": {
                        "start": {
                          "line": 18,
                          "column": 25,
                          "offset": 337
                        },
                        "end": {
                          "line": 18,
                          "column": 38,
                          "offset": 350
                        }
                      }
                    },
                    "file": {
                      "File": "global_primitives.pli"
                    }
                  }
                }
              },
              "initializer": null,
              "address": null,
              "location": {
                "span": {
                  "Range": {
                    "start": {
                      "line": 18,
                      "column": 8,
                      "offset": 320
                    },
                    "end": {
                      "line": 18,
                      "column": 23,
                      "offset": 335
                    }
                  }
                },
                "file": {
                  "File": "global_primitives.pli"
                }
              }
            }
          ],
          "kind": "Global",
          "linkage": "Internal",
          "location": {
            "span": {
              "Range": {
                "start": {
                  "line": 1,
                  "column": 4,
                  "offset": 5
                },
                "end": {
                  "line": 1,
                  "column": 14,
                  "offset": 15
                }
              }
            },
            "file": {
              "File": "global_primitives.pli"
            }
          }
        }
      ],
      "var_config": [],
      "pous": [],
      "implementations": [],
      "interfaces": [],
      "user_types": [],
      "file": {
        "File": "global_primitives.pli"
      }
    }
  ]
}
