compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_2_global_complex_types_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef GLOBAL_COMPLEX_TYPES_H_
#define GLOBAL_COMPLEX_TYPES_H_

#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include <time.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

extern char gVarString[256];
extern int16_t gVarWString[6001];
extern int16_t gVarIntArray[12];
extern int16_t* gVarRefToInt;
extern int16_t* gVarPointerToInt;
extern time_t* gVarRefToDate;
extern time_t* gVarPointerToDate;
extern int16_t gVarIntWithRange;

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !GLOBAL_COMPLEX_TYPES_H_ */
