compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_3_enum_types_generated_header_file.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "&generated_header.get_contents()"
---
// ---------------------------------------------------- //
// This file is auto-generated                          //
// Manual changes made to this file will be overwritten //
// ---------------------------------------------------- //

#ifndef ENUM_TYPES_H_
#define ENUM_TYPES_H_

#include <stdint.h>
#include <stdbool.h>
#include <math.h>
#include <time.h>
#include <dependencies.plc.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef enum eSimpleEnumType {
    red = 0,
    green,
    blue
} SimpleEnumType;

typedef enum eComplexEnumType {
    orange = 10,
    yellow = 20,
    purple = 30
} ComplexEnumType;

typedef enum eCodesysStyleEnumType {
    Crimson = 100,
    Emerald = 200,
    Topaz = 300
} CodesysStyleEnumType;

#ifdef __cplusplus
}
#endif /* __cplusplus */

#endif /* !ENUM_TYPES_H_ */
