compiler/plc_driver/src/tests/snapshots/plc_driver__tests__header_generator__case_4_structs_generated_header_file_template_data.snap
---
source: compiler/plc_driver/src/tests/header_generator.rs
expression: "serde_json::to_string_pretty(&prepared_header_data).expect(\"Failed to serialize item!\")"
---
{
  "template_data": {
    "user_defined_types": {
      "aliases": [],
      "structs": [
        {
          "name": "StructWithPrimitiveTypes",
          "variables": [
            {
              "data_type": "uint8_t",
              "name": "Field1",
              "variable_type": "Default"
            },
            {
              "data_type": "int16_t",
              "name": "Field2",
              "variable_type": "Default"
            },
            {
              "data_type": "int32_t",
              "name": "Field3",
              "variable_type": "Default"
            }
          ]
        },
        {
          "name": "StructWithComplexTypes",
          "variables": [
            {
              "data_type": "uint8_t",
              "name": "byteField",
              "variable_type": "Default"
            },
            {
              "data_type": "int16_t",
              "name": "intField",
              "variable_type": "Default"
            },
            {
              "data_type": "int32_t",
              "name": "dIntField",
              "variable_type": "Default"
            },
            {
              "data_type": "char",
              "name": "stringField",
              "variable_type": {
                "Array": 255
              }
            },
            {
              "data_type": "int16_t",
              "name": "wStringField",
              "variable_type": {
                "Array": 6000
              }
            },
            {
              "data_type": "ComplexEnumType",
              "name": "complexEnumTypeField",
              "variable_type": "Default"
            },
            {
              "data_type": "int16_t",
              "name": "intArrayField",
              "variable_type": {
                "Array": 10
              }
            }
          ]
        }
      ],
      "enums": [
        {
          "name": "ComplexEnumType",
          "variables": [
            {
              "data_type": "",
              "name": "orange",
              "variable_type": {
                "Declaration": "10"
              }
            },
            {
              "data_type": "",
              "name": "yellow",
              "variable_type": {
                "Declaration": "20"
              }
            },
            {
              "data_type": "",
              "name": "purple",
              "variable_type": {
                "Declaration": "30"
              }
            }
          ]
        }
      ]
    },
    "global_variables": [],
    "functions": []
  },
  "directory": "",
  "path": "structs.h",
  "file_name": "STRUCTS",
  "formatted_path": "STRUCTS_H_"
}
